--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -168,6 +168,15 @@
     justify-content: center;
     gap: 50px;
   }
+  .feed__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .feed_title {
+    text-align: center;
+  }
 }
 @media (max-width: 479.98px) {
   .intro__suptitle {
