--- a/scss/adaptive.scss
+++ b/scss/adaptive.scss
@@ -199,6 +199,17 @@
    justify-content: center;
    gap: 50px;
   }
+
+  .feed__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .feed_title {
+    text-align: center;
+  }
 }
 @media (max-width: 479.98px) {
   .intro__suptitle {
