--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,13 @@ body {
 }
 
 .intro__subtitle {
+  color: var(--text, #31353b);
+  font-size: 17px;
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.17px;
   display: flex;
   width: 499px;
   flex-direction: column;
