--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,6 +173,13 @@ body {
   margin-bottom: 23px;
 }
 .intro__subtitle {
+  color: var(--text, #31353b);
+  font-size: 17px;
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.17px;
   display: flex;
   width: 499px;
   flex-direction: column;
